# agentic-programming

./: .env.example  .gitignore  README.md  cyclic_agent.py  cyclic_agent_with_tools.py  first_agent.py  main.py  myip.py  pyproject.toml  results.json  results.txt  test.py  translate-gemini.py
.agents/skills/rogue-ai-core/: SKILL.md
temp/: intro_pdf_text.txt
tests/: pdf_plumber.py  text_splitter.py  translate.py
utilities/: load_model.py
