[project]
name = "rogue-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.73.1",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
]
